--- a/src/components/ui/Share/styles.module.scss
+++ b/src/components/ui/Share/styles.module.scss
@@ -127,7 +127,7 @@
   color: #35c602;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .shareIcon {
     top: 8px;
     right: 6px;
